--- a/src/css/main.css
+++ b/src/css/main.css
@@ -70,29 +70,14 @@ h2 {
     text-align: left;
 }
 
-.iconSidebarControl_expanded {
-    height: 1000px;
-}
-
-.iconSidebarControl-content {
-  position: absolute;
-  right: 0;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  background-color: rgb(255, 255, 255);
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-.iconSidebarControl-content .content {
-      background-color: rgb(255, 255, 255);
-}
-
 /**/
 
 
 .gmx-features-list {
     max-height: 350px;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
+}
+
+.gmx-list-item {
+    height: 30px;
 }
