--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,4 @@
+@import "./L.Control.gmxTimeLine.css";
 html, body {
     width: 100%;
     margin: 0px;
@@ -74,7 +75,7 @@ h2 {
 
 
 .gmx-features-list {
-    max-height: 350px;
+    max-height: 360px;
     /* overflow-y: scroll; */
 }
 
