--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,12 +15,12 @@ h2 {
 }
 
 #map {
-    height: 600px;
+    height: 100%;
 }
 
 .wrap {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0;
 }
 .left-panel {
