--- a/demo/css/preview.css
+++ b/demo/css/preview.css
@@ -5,6 +5,7 @@ section {
   background: white;
   display: block;
   margin: 0 auto;
+  padding: 10px;
   margin-bottom: 0.5cm;
   box-shadow: 0 0 0.5cm rgba(0,0,0,0.5);
 }
@@ -22,4 +23,47 @@ section[size="A4"][layout="portrait"] {
     margin: 0;
     box-shadow: 0;
   }
+}
+
+.preview-header {
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+#preview-map-container {
+    float: left;
+    width: 50%;
+    height: 50%;
+}
+
+#preview-params-container {
+    float: right;
+    width: 50%;
+}
+
+.preview-row-header {
+    font-size: 16px;
+    text-align: center;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+.preview-row {
+    margin: 4px;
+    padding-left: 10px;
+}
+
+.preview-row-part {
+    width: 50%;
+    display: inline-block;
+}
+
+.preview-row-label {
+    font-weight: bold;
+}
+
+.preview-row-value {
+
 }
