--- a/src/template/template.html
+++ b/src/template/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0034)http://localhost:8080/preview.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        
+
         <title>Предпросмотр</title>
         <!-- bootstrap -->
         <link rel="stylesheet" href="./template_files/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -12,13 +12,24 @@
         <link rel="stylesheet" href="./template_files/geomixer.css" charset="utf-8">
         <script type="text/javascript" src="./template_files/geomixer-src.js.Без названия" charset="utf-8"></script>
 
-        <link rel="stylesheet" href="./template_files/preview.css" charset="utf-8">
+        <link rel="stylesheet" href="./css/preview.css" charset="utf-8">
     </head>
     <body>
         <section size="A4" layout="portrait">
             <div class="preview-header">Отчет об использовании лесов</div>
             <div id="preview-map-container" class="leaflet-container leaflet-fade-anim" tabindex="0" style="position: relative;"><div class="leaflet-map-pane" style="transform: translate3d(0px, 0px, 0px);"><div class="leaflet-tile-pane"><div class="leaflet-layer"><div class="leaflet-tile-container"></div><div class="leaflet-tile-container leaflet-zoom-animated"><img class="leaflet-tile leaflet-tile-loaded" src="./template_files/41.png" style="height: 256px; width: 256px; left: 110px; top: -11px;"><img class="leaflet-tile leaflet-tile-loaded" src="./template_files/42.png" style="height: 256px; width: 256px; left: 110px; top: 245px;"><img class="leaflet-tile leaflet-tile-loaded" src="./template_files/41(1).png" style="height: 256px; width: 256px; left: -146px; top: -11px;"><img class="leaflet-tile leaflet-tile-loaded" src="./template_files/41(2).png" style="height: 256px; width: 256px; left: 366px; top: -11px;"><img class="leaflet-tile leaflet-tile-loaded" src="./template_files/42(1).png" style="height: 256px; width: 256px; left: -146px; top: 245px;"><img class="leaflet-tile leaflet-tile-loaded" src="./template_files/42(2).png" style="height: 256px; width: 256px; left: 366px; top: 245px;"></div></div></div><div class="leaflet-objects-pane"><div class="leaflet-shadow-pane"></div><div class="leaflet-overlay-pane"></div><div class="leaflet-marker-pane"></div><div class="leaflet-popup-pane"></div></div></div><div class="leaflet-control-container"><div class="leaflet-top leaflet-left"></div><div class="leaflet-top leaflet-right"></div><div class="leaflet-bottom leaflet-left"></div><div class="leaflet-bottom leaflet-right"></div><div class="leaflet-bottom leaflet-left leaflet-right"></div><div class="leaflet-bottom leaflet-left"></div><div class="leaflet-bottom leaflet-left leaflet-right"></div><div class="leaflet-bottom leaflet-right"></div><div class="leaflet-top leaflet-bottom leaflet-left leaflet-right"></div><div class="leaflet-right leaflet-top leaflet-bottom"></div><div class="leaflet-left leaflet-top leaflet-bottom"></div><div class="leaflet-top leaflet-left leaflet-right"></div></div><div class="leaflet-contextmenu" style="z-index: 10000; position: absolute;"></div></div>
             <div id="preview-params-container"><div data-reactroot=""><div class="preview-row-header">Организация</div><div><div class="preview-row"><div class="preview-row-part preview-row-label">Наименование организации</div><div class="preview-row-part preview-row-value">ООО "Березниковское лесничество"</div></div><div class="preview-row"><div class="preview-row-part preview-row-label">ИНН</div><div class="preview-row-part preview-row-value">3328455371</div></div></div><div class="preview-row-header">Лесной участок</div><div><div class="preview-row"><div class="preview-row-part preview-row-label">Субъект Российской Федерации</div><div class="preview-row-part preview-row-value">Владимирская область</div></div><div class="preview-row"><div class="preview-row-part preview-row-label">Лесничество</div><div class="preview-row-part preview-row-value">Березниковское</div></div><div class="preview-row"><div class="preview-row-part preview-row-label">Участковое лесничество</div><div class="preview-row-part preview-row-value">Морозовское</div></div><div class="preview-row"><div class="preview-row-part preview-row-label">Квартал</div><div class="preview-row-part preview-row-value">112</div></div><div class="preview-row"><div class="preview-row-part preview-row-label">Выдел</div><div class="preview-row-part preview-row-value">1126</div></div></div><div class="preview-row-header">Космический снимок</div><div><div class="preview-row"><div class="preview-row-part preview-row-label">Тип съемки</div><div class="preview-row-part preview-row-value">оптическая</div></div><div class="preview-row"><div class="preview-row-part preview-row-label">Съемочная система</div><div class="preview-row-part preview-row-value">Sentinel-2</div></div><div class="preview-row"><div class="preview-row-part preview-row-label">ID снимка</div><div class="preview-row-part preview-row-value">S2A_20161215_083342_146_37UEB</div></div><div class="preview-row"><div class="preview-row-part preview-row-label">Разрешение снимка</div><div class="preview-row-part preview-row-value"></div></div><div class="preview-row"><div class="preview-row-part preview-row-label">Дата съемки</div><div class="preview-row-part preview-row-value">15.12.2016</div></div></div></div></div>
+            <div id="preview-footer">
+                <img class="scanex-logo" src="./css/scanex_logo.jpg" />
+                <div class="scanex-description">
+                    <b>Группа компаний «СКАНЭКС»</b>
+                    <br>
+                    108811, г. Москва, пос. Румянцево, стр. 1, Бизнес-парк «Румянцево», корп. А, 819А
+                    <br>
+                    Телефон: +7 (495) 739-73-85
+                    <br>E-mail: info@scanex.ru
+                </div>
+            </div>
         </section>
     <script type="text/javascript" src="./template_files/preview.js.Без названия"></script>
 
