--- a/demo/css/preview.css
+++ b/demo/css/preview.css
@@ -18,6 +18,10 @@ section[size="A4"][layout="portrait"] {
   height: 21cm;
 }
 
+iframe {
+    border: none;
+}
+
 @media print {
   body, section {
     margin: 0;
@@ -66,4 +70,20 @@ section[size="A4"][layout="portrait"] {
 
 .preview-row-value {
 
+}
+
+#preview-footer {
+    position: absolute;
+    bottom: 300px;
+    width: 100%;
+}
+
+.scanex-logo {
+    width: 200px;
+    float: left;
+    margin-right: 10px;
+}
+
+.scanex-description {
+    font-size: 13px;
 }
