Apply new styles

--- a/src/css/forestProjectPlugin.sass
+++ b/src/css/forestProjectPlugin.sass
@@ -1,14 +1,9 @@
 /* @import "./L.Control.gmxTimeLine.css"*/
 /*@import "./fontello/css/fontello.css" */
+@import "./common.sass"
 
 .forest-plugin-container
     font-family: Arial
-
-
-.forest-plugin-header
-    height: 10%
-    background-color: #e1e8ed
-
 
 .forest-plugin-content
     height: 90%
