--- a/src/css/common.sass
+++ b/src/css/common.sass
@@ -1,5 +1,8 @@
+.forest-plugin-container
+    font-family: Roboto
+
 .forest-plugin-header
-    width: 300px
+    width: 100%
     height: 26px
     background-color: #ebf1f5
 
