--- a/src/css/common.sass
+++ b/src/css/common.sass
@@ -1,11 +1,19 @@
-@import "./fontello/css/fontello.css"
+@import 'icons.sass'
+
 .forest-plugin-container
-    font-family: Roboto
+    font-family: "Roboto"
+    border-collapse: collapse
 
 .forest-plugin-header
     width: 100%
-    height: 26px
+    height: 40px
+    line-height: 40px
+    padding-left: 10px
     background-color: #ebf1f5
+    border: 1px solid #bbb
+    font-size: 18px
+    font-weight: bold
+    color: rgb(91,114,132)
 
 .gmx-sidebar-labeled-block
     margin-top: 4px
