--- a/src/js/components/FeaturesTable/react-table.sass
+++ b/src/js/components/FeaturesTable/react-table.sass
@@ -29,6 +29,7 @@
   width: 100%
   border-collapse: collapse
   overflow: auto
+  background-color: #ffffff
 
 .ReactTable .rt-thead
   -webkit-box-flex: 1
