--- a/src/js/components/LayerSelectPanel/index.sass
+++ b/src/js/components/LayerSelectPanel/index.sass
@@ -1,6 +1,14 @@
 .gmx-select-layer-container
-    
+    width: 100%
+    height: 40px
+    background-color: #ebf1f5
+    border: 1px solid #bbb
+
     &__label
         width: 105px
         height: 22px
-        background-color: #ebf1f5
+        padding: 0 10px
+        font-size: 16px
+        font-weight: 400
+        line-height: 31px
+        color: rgb(91,114,132)
