--- a/src/js/components/Button/index.sass
+++ b/src/js/components/Button/index.sass
@@ -1,14 +1,36 @@
 .gmx-addon-button
     box-sizing: border-box
-    width: 45px
+    width: 15%
     height: 33px
     display: table-cell
     vertical-align: middle
     background-color: #d7e1e7
     border: none
     border-radius: 0 3px 3px 0
+    cursor: pointer
     &:focus
         outline: none
     &-toggled
         @extend .gmx-addon-button
+        box-shadow: inset 0 1px 4px rgba(27,31,35,0.55)
+
+.gmx-addon-button-medium
+    @extend .gmx-addon-button
+    width: 30%
+    &:focus
+        outline: none
+    &-toggled
+        @extend .gmx-addon-button
+        box-shadow: inset 0 1px 4px rgba(27,31,35,0.55)
+
+.gmx-sidebar-button
+    height: 40px
+    border-radius: 3px
+    background-color: #d7e1e7
+    border: 1px solid #d7e1e7
+    cursor: pointer
+    &:focus
+        outline: none
+    &-toggled
+        @extend .gmx-sidebar-button
         box-shadow: inset 0 1px 4px rgba(27,31,35,0.55)
