--- a/src/js/components/FeaturesTable/icon.sass
+++ b/src/js/components/FeaturesTable/icon.sass
@@ -1,12 +1,14 @@
 .gmx-table-icon-container
     width: 20px
     height: 20px
+    margin: auto
 
 .gmx-status-indicator
     width: 14px
     height: 14px
     line-height: 24px
     border-radius: 50%
+    margin: auto
     &-bad
         @extend .gmx-status-indicator
         background-color: #F79F81
