Fix local icon paths

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1,5 +1,4 @@
-// @import "./L.Control.gmxTimeLine.css"
-// @import "./L.Control.gmxTimeLine.css"
+@import "../js/lib/GMXPluginTimeLine/L.Control.gmxTimeLine.css"
 @import "./common.sass"
 
 html, body
