Decouple makeReport button

--- a/src/css/common.sass
+++ b/src/css/common.sass
@@ -10,7 +10,6 @@
     line-height: 40px
     padding-left: 10px
     background-color: #ebf1f5
-    border: 1px solid #bbb
     font-size: 18px
     font-weight: bold
     color: rgb(91,114,132)
@@ -21,3 +20,8 @@
     width: auto
     display: grid
     text-align: left
+
+.forest-loader-holder
+    font-family: "Roboto"
+    width: 100%
+    text-align: center
