--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -7,7 +7,6 @@ html, body
 
 
 body
-    background-color: #F3F3F3
     background-color: white
     font-family: Arial
 
@@ -147,8 +146,8 @@ h2
     width: 360px
     height: 100%
     float: left
-    background: rgba(116, 194, 189, 0.2)
-    overflow-y: scroll
+    background-color: #fff
+    overflow-y: auto
     border-right: 1px dotted
 
 
@@ -217,11 +216,6 @@ option
     float: left
     bottom: 15px
     position: relative
-
-
-.gmx-list-item.active
-    background-color: #eee
-
 
 .feature-list-item-part
     width: 25%
