--- a/src/js/components/Select/index.sass
+++ b/src/js/components/Select/index.sass
@@ -8,7 +8,7 @@
     border: 1px solid #d7e1e7
     &-medium
         @extend .gmx-sidebar-select
-        width: 200px
+        width: 70%
     &-large
         @extend .gmx-sidebar-select
         width: 100%
