--- a/src/js/components/LayerSelectPanel/index.sass
+++ b/src/js/components/LayerSelectPanel/index.sass
@@ -2,10 +2,9 @@
     width: 100%
     height: 40px
     background-color: #ebf1f5
-    border: 1px solid #bbb
-
+    border-bottom: 1px solid #bbb
     &__label
-        width: 105px
+        width: 30%
         height: 22px
         padding: 0 10px
         font-size: 16px
