--- a/src/js/components/MakeReportButton/index.sass
+++ b/src/js/components/MakeReportButton/index.sass
@@ -1,6 +1,7 @@
 .gmx-button-container
     width: 100%
     height: 40px
+    margin: 10px 0
     & button
         display: block
         margin: 0 auto
