Highlight selected features

--- a/src/js/components/FeaturesTable/index.sass
+++ b/src/js/components/FeaturesTable/index.sass
@@ -34,6 +34,10 @@
 
 .ReactTable .-pagination
     display: table
+    width: 100%
+
+.ReactTable .-pagination button
+    padding: 0 6px
 
 .ReactTable .-previous,
 .ReactTable .-center,
