--- a/src/js/components/Button/index.sass
+++ b/src/js/components/Button/index.sass
@@ -1,4 +1,5 @@
 .gmx-addon-button
+    padding: 0 6px
     box-sizing: border-box
     width: 15%
     height: 33px
@@ -8,6 +9,7 @@
     border: none
     border-radius: 0 3px 3px 0
     cursor: pointer
+    background: url(https://png.icons8.com/material/ffffff/outline.png) no-repeat center rgba(73, 103, 125, 0.7)
     &:focus
         outline: none
     &-toggled
@@ -16,16 +18,21 @@
 
 .gmx-addon-button-medium
     @extend .gmx-addon-button
+    background: none
+    background-color: #d7e1e7
     width: 40%
     &:focus
         outline: none
     &-toggled
         @extend .gmx-addon-button
+        background: none
+        background-color: #d7e1e7
         box-shadow: inset 0 1px 4px rgba(27,31,35,0.55)
 
 .gmx-sidebar-button
     height: 40px
     border-radius: 3px
+    padding: 0 6px
     background-color: #d7e1e7
     border: 1px solid #d7e1e7
     cursor: pointer
