--- a/src/js/components/FeaturesTable/icon.sass
+++ b/src/js/components/FeaturesTable/icon.sass
@@ -5,17 +5,17 @@
     cursor: pointer
 
 .gmx-status-indicator
-    width: 14px
-    height: 14px
+    width: 8px
+    height: 8px
     line-height: 24px
     border-radius: 50%
-    margin: auto
+    margin: 0 auto
     &-bad
         @extend .gmx-status-indicator
-        background-color: #F79F81
+        background-color: #f96060
     &-mean
         @extend .gmx-status-indicator
-        background-color: #F4FA58
+        background-color: #f9de60
     &-good
         @extend .gmx-status-indicator
-        background-color: #9FF781
+        background-color: #4de371
