--- a/src/js/components/Button/index.sass
+++ b/src/js/components/Button/index.sass
@@ -28,6 +28,8 @@
         background: none
         background-color: #d7e1e7
         box-shadow: inset 0 1px 4px rgba(27,31,35,0.55)
+    &[disabled]
+        cursor: default
 
 .gmx-sidebar-button
     height: 40px
