--- a/src/js/components/FeaturesTable/index.sass
+++ b/src/js/components/FeaturesTable/index.sass
@@ -18,15 +18,25 @@
     background-color: #ffffff
 
 .ReactTable .rt-thead
+    border-collapse: collapse
     cursor: pointer
     width: 100%
-    height: 33px
+    height: 20px
     border-radius: 3px
     background-color: #f7fbff
+
+.ReactTable .rt-th
+    border: 1px solid #d7e1e7
+    // border-left: 1px solid #d7e1e7
+    // border-right: 1px solid #d7e1e7
 
 .ReactTable .rt-th,
 .ReactTable .rt-td
     display: table-cell
+
+
+.ReactTable .rt-resizable-header-content
+    text-align: center
 
 .ReactTable .rt-resizable-header-content,
 .ReactTable .rt-td
