--- a/src/js/components/FeaturesTable/icon.sass
+++ b/src/js/components/FeaturesTable/icon.sass
@@ -1,6 +1,6 @@
 .gmx-table-icon-container
-    width: 20px
-    height: 20px
+    width: 16px
+    height: 16px
     margin: auto
     cursor: pointer
 
@@ -19,3 +19,9 @@
     &-good
         @extend .gmx-status-indicator
         background-color: #4de371
+
+.gmx-table-icon
+    width: 100%
+    height: 100%
+    &:hover
+        fill: #70cbe0
