--- a/src/css/forestProjectPlugin.sass
+++ b/src/css/forestProjectPlugin.sass
@@ -1,11 +1,13 @@
 @import "./common.sass"
 
+div[data-pane-id="forest-project"]
+    overflow-y: auto
 
 .forest-plugin-content
+    width: 100%
     height: 90%
     background-color: #f5f8fa
     overflow-y: auto
-
 
 .forest-loader-holder
     padding: 10px
@@ -30,7 +32,6 @@
     display: table-row
     width: auto
     clear: both
-
 
 .div-table-col
     float: left
