--- a/src/css/common.sass
+++ b/src/css/common.sass
@@ -5,7 +5,6 @@
     border-collapse: collapse
 
 .forest-plugin-header
-    width: 100%
     height: 40px
     line-height: 40px
     padding-left: 10px
@@ -25,3 +24,6 @@
     font-family: "Roboto"
     width: 100%
     text-align: center
+
+.forest-features-block
+    padding: 0 10px
