--- a/src/js/components/Label/index.sass
+++ b/src/js/components/Label/index.sass
@@ -3,6 +3,7 @@
     line-height: 31px
     color: rgb(91,114,132)
     font-family: "Roboto"
+    padding-left: 10px
     &-medium
         @extend .gmx-sidebar-label
         font-size: 16px
