Fix sat ID in preview

--- a/src/css/forestProjectPlugin.sass
+++ b/src/css/forestProjectPlugin.sass
@@ -4,7 +4,7 @@ div[data-pane-id="forest-project"]
     overflow-y: auto
 
 .forest-plugin-content
-    width: 100%
+    // width: 100%
     height: 90%
     background-color: #f5f8fa
     overflow-y: auto
