--- a/src/js/components/Button/index.sass
+++ b/src/js/components/Button/index.sass
@@ -38,9 +38,12 @@
     padding: 0 6px
     background-color: #d7e1e7
     border: 1px solid #d7e1e7
-    cursor: pointer 
+    cursor: pointer
     &:focus
         outline: none
     &-toggled
         @extend .gmx-sidebar-button
         box-shadow: inset 0 1px 4px rgba(27,31,35,0.55)
+    &-error
+        @extend .gmx-sidebar-button
+        color: red
