--- a/src/server-preview/preview.css
+++ b/src/server-preview/preview.css
@@ -1,7 +1,7 @@
 body {
     background: white;
-    width: 1500px;
-    height: 1000px;
+    /* width: 1500px; */
+    /* height: 1000px; */
 }
 
 .preview-header {
@@ -11,15 +11,15 @@ body {
     margin-bottom: 10px;
 }
 
-#preview-map-container {
+.preview-map-container {
     float: left;
-    width: 50%;
-    height: 50%;
+    /* width: 50%; */
+    /* height: 50%; */
 }
 
-#preview-params-container {
+.preview-params-container {
     float: right;
-    width: 50%;
+    /* width: 50%; */
 }
 
 .preview-row-header {
@@ -47,7 +47,7 @@ body {
 
 }
 
-#preview-footer {
+.preview-footer {
     position: absolute;
     bottom: 20px;
     width: 100%;
