--- a/src/css/common.sass
+++ b/src/css/common.sass
@@ -3,6 +3,7 @@
 .forest-plugin-container
     font-family: "Roboto"
     border-collapse: collapse
+    padding-bottom: 17px
 
 .forest-plugin-header
     height: 40px
@@ -12,6 +13,12 @@
     font-size: 18px
     font-weight: bold
     color: rgb(91,114,132)
+    font-family: Arial
+    color:  #181f25
+    font-size: 15px
+    font-weight: 600;
+    text-align: left
+    border-bottom: 1px solid #bbb
 
 .gmx-sidebar-labeled-block
     margin-top: 4px
