--- a/src/js/components/Checkbox/index.sass
+++ b/src/js/components/Checkbox/index.sass
@@ -1,2 +1,11 @@
 .gmx-checkbox-container
     margin: auto
+    padding-top: 5px
+    padding-left: 10px
+    font-family: Arial
+    color: #5baceb
+    font-size: 13px
+    font-weight: 600
+    align-items: center
+    display: flex
+
