--- a/src/js/components/Input/index.sass
+++ b/src/js/components/Input/index.sass
@@ -4,14 +4,28 @@
     height: 33px
     padding: 0 8px
     border-radius: 3px
-    background-color: #f7fbff
-    border: 1px solid #d7e1e7
+    //background-color: #f7fbff
+    //border: 1px solid #d7e1e7
+    background: #FFF
+    border: 1px solid rgba(27, 68, 97, 0.3)
+    font-family: Arial
+    color: #5b7284
+    font-size: 13px
+    font-weight: 400
     &-medium
         @extend .gmx-sidebar-input
         width: 200px
     &-large
         @extend .gmx-sidebar-input
         width: 100%
+        background: #FFF
+        border: 1px solid rgba(27, 68, 97, 0.3) !important
+        font-family: Arial
+        color: #5b7284
+        font-size: 13px
+        font-weight: 400
+        line-height: 31.249px
+        text-align: left
     &-with-addon
         @extend .gmx-sidebar-input
         display: table-cell
