--- a/src/js/components/Button/index.sass
+++ b/src/js/components/Button/index.sass
@@ -9,19 +9,29 @@
     border: none
     border-radius: 0 3px 3px 0
     cursor: pointer
-    background: url(https://png.icons8.com/material/ffffff/outline.png) no-repeat center rgba(73, 103, 125, 0.7)
+    //background: url(https://png.icons.com/material/ffffff/outline.png) no-repeat center rgba(73, 103, 125, 0.7)
+    background: url(https://png.icons8.com/ios-glyphs/23/57717d/list.png) no-repeat right #d8e1e8 !important
+    background-position-x: 50% !important
+    border-right: 1px solid rgba(27, 68, 97, 0.3)
+    border-top: 1px solid rgba(27, 68, 97, 0.3)
+    border-bottom: 1px solid rgba(27, 68, 97, 0.3)
     &:focus
         outline: none
     &-toggled
         @extend .gmx-addon-button
-        box-shadow: inset 0 1px 4px rgba(27,31,35,0.55)
+        //box-shadow: inset 0 1px 4px rgba(27,31,35,0.55)
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2)
 
 .gmx-addon-button-medium
     @extend .gmx-addon-button
-    background: none
+    background: none!important
     background-color: #d7e1e7
     width: 40%
     cursor: pointer
+    font-family: Arial
+    color: #5b7284
+    font-size: 13px
+    font-weight: 500
     &:focus
         outline: none
     &-toggled
@@ -33,12 +43,20 @@
         cursor: default
 
 .gmx-sidebar-button
-    height: 40px
+    //height: 40px
     border-radius: 3px
     padding: 0 6px
-    background-color: #d7e1e7
+    //background-color: #d7e1e7
     border: 1px solid #d7e1e7
     cursor: pointer
+    background-color: #5baceb
+    width: 94%
+    height: 47px
+    color: #FFF
+    font-family: Arial
+    font-size: 17px
+    font-weight: 600
+
     &:focus
         outline: none
     &-toggled
