--- a/src/js/components/FeaturesTable/index.sass
+++ b/src/js/components/FeaturesTable/index.sass
@@ -7,6 +7,11 @@
 
 .ReactTable *
     box-sizing: border-box
+    margin-bottom: 3px
+    font-family: Arial
+    color: #5b7284
+    font-size: 13px
+    font-weight: 400
 
 .ReactTable .rt-table
     -webkit-box-align: stretch
@@ -21,7 +26,7 @@
     border-collapse: collapse
     cursor: pointer
     width: 100%
-    height: 20px
+    height: 30px
     border-radius: 3px
     background-color: #f7fbff
 
@@ -40,7 +45,12 @@
 
 .ReactTable .rt-resizable-header-content,
 .ReactTable .rt-td
-    padding: 0 6px
+    //padding: 0 6px
+    padding: 0
+    font-family: Arial
+    color: #5b7284
+    font-size: 13px
+    font-weight: 400
 
 .ReactTable .-pagination
     display: table
@@ -48,6 +58,12 @@
 
 .ReactTable .-pagination button
     padding: 0 6px
+    margin-bottom: -6px
+    margin-top: -3px
+    font-family: Arial
+    color: #5b7284
+    font-size: 14px
+    font-weight: 500
 
 .ReactTable .-previous,
 .ReactTable .-center,
@@ -56,13 +72,15 @@
 
 .ReactTable .-center
     padding: 0 10px
+    text-align: center
 
 .ReactTable .-pageJump
     width: 40%
     display: inline-block
 
 .ReactTable .-pageJump input
-    width: 100%
+    width: 70%
+
 
 .ReactTable .-pagination button
     height: 40px
