--- a/src/js/components/GeometrySelectionPanel/index.sass
+++ b/src/js/components/GeometrySelectionPanel/index.sass
@@ -4,3 +4,20 @@
     & button
         display: block
         margin: 0 auto
+        width: 100%
+        margin-top: 15px!important
+        font-family: Arial
+        color: #5b7284
+        font-size: 14px
+        font-weight: 500
+        line-height: 31.249px
+        text-align: center
+        border: 1px solid rgba(27, 68, 97, 0.3)
+        background: url(https://png.icons8.com/material/22/57717d/polygon.png) no-repeat right #d8e1e8 !important
+        background-position-x: 17% !important
+        padding-left: 30px
+        transition: all 0.25s ease
+    & button:hover
+        background: url(https://png.icons8.com/material/22/57717d/polygon.png) no-repeat right #d4e2ed !important
+        background-position-x: 17% !important
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2)
