--- a/src/js/components/Label/index.sass
+++ b/src/js/components/Label/index.sass
@@ -1,12 +1,22 @@
 .gmx-sidebar-label
     font-size: 13px
     line-height: 31px
-    color: rgb(91,114,132)
-    font-family: "Roboto"
-    padding-left: 10px
+    //color: rgb(91,114,132)
+    font-family: "Arial"
+    padding-left: 0px
+    color: #777f85
     &-medium
         @extend .gmx-sidebar-label
         font-size: 16px
+        font-family: Arial
+        color: #5b7284
+        font-size: 16px
+        font-weight: 600
+        line-height: 31.249px
+        text-align: left
+        top: 10px
+        position: relative
+        padding-left: 10px
     &-small
         @extend .gmx-sidebar-label
         font-size: 13px
