--- a/src/js/components/LayerSelectPanel/index.sass
+++ b/src/js/components/LayerSelectPanel/index.sass
@@ -11,3 +11,9 @@
         font-weight: 400
         line-height: 31px
         color: rgb(91,114,132)
+        font-family: Arial
+        color:  #5b7284
+        font-size: 15px
+        font-weight: 600
+        line-height: 38px
+        text-align: left
