--- a/src/js/components/Select/index.sass
+++ b/src/js/components/Select/index.sass
@@ -8,10 +8,28 @@
     border: 1px solid #d7e1e7
     &-medium
         @extend .gmx-sidebar-select
-        width: 65%
+        background-position-x: 99% !important
+        background-size: 25px 25px !important
+        width: 200px
+        height: 30px
+        float: right
+        margin-right: 10px
+        margin-top: 5px
+        font-family: Arial
+        color:  #5b7284
+        font-size: 13px
+        font-weight: 400
+        text-align: left
+        padding-right: 40px
+        overflow: hidden
+        text-overflow: ellipsis
     &-large
         @extend .gmx-sidebar-select
         width: 100%
+        font-family: Arial
+        color:  #5b7284
+        font-size: 13px
+        font-weight: 400
     &-with-addon
         @extend .gmx-sidebar-select
         display: table-cell
@@ -19,6 +37,10 @@
         width: 85%
         border-top-right-radius: 0
         border-bottom-right-radius: 0
+        font-family: Arial
+        color: #5b7284
+        font-size: 13px
+        font-weight: 400
         &-small
             @extend .gmx-sidebar-select-with-addon
             width: 60%
