--- a/src/js/components/Button/index.sass
+++ b/src/js/components/Button/index.sass
@@ -65,3 +65,8 @@
     &-error
         @extend .gmx-sidebar-button
         color: red
+    &-disabled
+        @extend .gmx-sidebar-button
+        pointer-events: none
+        background-color: #efefef
+        cursor: default
